# serializer version: 1
# name: TestCFCompliance.test_subset_open
  'cmems_mod_nws_bgc-pft_my_7km-3D-pico_P1M-m'
# ---
# name: TestCFCompliance.test_subset_open.1
  160
# ---
# name: TestCFCompliance.test_subset_open.2
  160
# ---
# name: TestCFCompliance.test_subset_open.3
  list([
  ])
# ---
# name: TestCFCompliance.test_subset_with_warns
  'cmems_obs-sst_med_phy-sst_nrt_diurnal-oi-0.0625deg_PT1H-m'
# ---
# name: TestCFCompliance.test_subset_with_warns.1
  135
# ---
# name: TestCFCompliance.test_subset_with_warns.2
  136
# ---
# name: TestCFCompliance.test_subset_with_warns.3
  list([
    '§2.6 Attributes',
    list([
      '§2.6.1 Conventions global attribute does not contain "CF-1.6"',
    ]),
  ])
# ---
